[tool.poetry]
name = "katan_ai"
version = "0.1.0"
description = ""
authors = ["smcrowley8 <smcrowley8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
inputs = "^0.5"
selenium = "^4.1.0"
requests = "^2.27.1"
pre-commit = "^2.17.0"
rich = "^11.0.0"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
