[tool.poetry]
name = "katan_ai"
version = "0.1.0"
description = ""
authors = ["Sean Crowley <smcrowley8@gmail.com>"]
maintainers = ["Sean Crowleu <smcrowley8@gmail.com>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/smcrowley8/myAES"
keywords = [
    "Poetry",
    "CLI",
    "AES",
    "encryption"
]
packages = [
    {include = "katan_ai"}
]

[tool.poetry.scripts]
katanAI= "katan_ai.main:cli"


[tool.poetry.dependencies]
python = "^3.8"
inputs = "^0.5"
selenium = "^4.1.0"
requests = "^2.27.1"
pre-commit = "^2.17.0"
rich = "^11.0.0"
numpy = "^1.22.1"
colored = "^1.4.3"
click = "^8.0.3"
webdriver-manager = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
